# Paracord

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.linux-build  Dockerfile.linux-client  LICENSE  README.md  docker-compose.yml
.cargo/: audit.toml
client/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
config/: paracord.example.toml
crates/paracord-db/: Cargo.toml
crates/paracord-db/migrations/: 20260213000001_crypto_auth_setting.sql  20260214000001_attachment_ownership.sql  20260214000002_member_scoping.sql  20260215000003_auth_sessions.sql  20260215000004_security_events.sql  20260215000005_member_scoping_correction.sql  20260215000006_hash_webhook_tokens.sql  20260215000007_scope_bans.sql  20260215000008_federated_servers.sql  20260215000009_default_member_stream_permission.sql  20260216000001_threads.sql  20260216000002_polls.sql  20260216000003_bot_applications.sql  20260216000004_forum_channels.sql  20260216000005_scheduled_events.sql  20260217000001_rate_limit_state.sql  20260217000002_signal_prekeys.sql  20260218000001_federation_transport_hardening.sql  20260218000002_federation_identity_and_membership.sql  20260219000001_federation_namespace_and_sync.sql  20260223000001_bot_store_settings.sql  20260224000001_economy.sql  20260225000001_bot_commands_and_interactions.sql  20260225000002_bot_scopes_and_store.sql
crates/paracord-db/migrations_pg/: 20260223000001_bot_store_settings.sql  20260224000001_economy.sql  20260225000001_bot_commands_and_interactions.sql  20260225000002_bot_scopes_and_store.sql  20260226000001_interaction_token_response_message.sql  20260226000002_add_token_hash_indexes.sql
crates/paracord-db/src/: application_commands.rs  attachments.rs  audit_log.rs  bans.rs  bot_applications.rs  channels.rs  dms.rs  economy.rs  emojis.rs  federation.rs  guilds.rs  interaction_tokens.rs  invites.rs  lib.rs  members.rs  messages.rs  polls.rs  prekeys.rs  rate_limits.rs  reactions.rs  read_states.rs  relationships.rs  roles.rs  scheduled_events.rs  security_events.rs  server_settings.rs  sessions.rs  users.rs  voice_states.rs  webhooks.rs
crates/paracord-federation/: Cargo.toml
crates/paracord-federation/src/: client.rs  lib.rs  protocol.rs  signing.rs  transport.rs
crates/paracord-media/: Cargo.toml
crates/paracord-media/src/: lib.rs  livekit.rs  s3.rs  storage.rs  streaming.rs  voice.rs
crates/paracord-util/: Cargo.toml
crates/paracord-util/src/: at_rest.rs  lib.rs  pagination.rs  snowflake.rs  validation.rs
docs/: PLAN_EXECUTION_TRACKER.md  bot-development.md  docker-setup.md  federation-protocol.md  incident-response-runbook.md  launch-checklist.md  security-dependency-policy.md  security-endpoint-checklist.md  security-release-checklist.md  security-threat-model.md  security-ui-checklist.md
(+262 files in other folders)
