[package]
name = "paracord-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
paracord-models = { workspace = true }
paracord-util = { workspace = true }
sqlx = { workspace = true, features = ["migrate", "macros"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
