[package]
name = "paracord-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
hkdf = { workspace = true }
